# asio-recipes

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.devcontainer/: Dockerfile
benchmark/: CMakeLists.txt  README.md
benchmark/bm_asio18_client/: CMakeLists.txt  client.cpp  main.cpp
benchmark/bm_asio18_server/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
benchmark/bm_asio18_server/include/bm_asio18_server/: client.h  server.h
benchmark/bm_asio_client/: CMakeLists.txt  client.cpp  main.cpp
benchmark/bm_asio_client/include/bm_asio_client/: client.h
benchmark/bm_asio_server/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
benchmark/bm_asio_server/include/bm_asio_server/: server.h
benchmark/bm_qt19_client/: CMakeLists.txt  client.cpp  main.cpp
benchmark/bm_qt19_server/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
benchmark/bm_qt19_server/include/bm_qt19_server/: client.h
benchmark/bm_qt20_server/: CMakeLists.txt  WorkLoad.proto  client.cpp  main.cpp  server.cpp
benchmark/bm_qt20_server/include/bm_qt20_server/: client.h  server.h
benchmark/bm_qt_client/: CMakeLists.txt  client.cpp  main.cpp
benchmark/bm_qt_client/include/bm_qt_client/: client.h
benchmark/bm_qt_server_pool/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
benchmark/bm_qt_server_pool/include/bm_qt_server_pool/: client.h  server.h
benchmark/bm_qt_server_threads/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
benchmark/bm_qt_server_threads/include/bm_qt_server_threads/: server.h
benchmark/libsee/: CMakeLists.txt  google_bench_see.cpp
benchmark/see/: CMakeLists.txt  google_bench_see_app.cpp
cmake/: Benchmarking.cmake  Boost.cmake  BuildInfo.cmake  Cppcheck.cmake  Doxygen.cmake  FTXUI.cmake  Precompiling.cmake  Protobuf.cmake  Testing.cmake
src/: CMakeLists.txt
src/asio1/: CMakeLists.txt  main.cpp
src/asio10/: CMakeLists.txt  main.cpp
src/asio11_client/: CMakeLists.txt  main.cpp
src/asio11_server/: CMakeLists.txt  main.cpp
src/asio12_client/: CMakeLists.txt  main.cpp
src/asio12_send_receive/: CMakeLists.txt  main.cpp
src/asio12_server/: CMakeLists.txt  main.cpp
src/asio13_client/: CMakeLists.txt  main.cpp
src/asio13_server/: CMakeLists.txt  main.cpp
src/asio13_server/include/asio13_server/: session.h
src/asio14_client/: CMakeLists.txt  client.cpp  main.cpp
src/asio14_client/include/asio14_client/: client.h
src/asio14_server/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
src/asio14_server/include/asio14_server/: client.h  server.h
src/asio15_ssl/: CMakeLists.txt  README.md  main.cpp
src/asio16/: CMakeLists.txt  main.cpp
src/asio17/: CMakeLists.txt  main.cpp
src/asio18_client/: CMakeLists.txt  client.cpp  main.cpp
src/asio18_client/include/asio18_client/: client.h
src/asio18_server/: CMakeLists.txt  WorkLoad.proto  client.cpp  main.cpp  server.cpp
src/asio18_server/include/asio18_server/: client.h  server.h
src/asio2/: CMakeLists.txt  main.cpp
src/asio3/: CMakeLists.txt  main.cpp
src/asio4/: CMakeLists.txt  main.cpp
src/asio5/: CMakeLists.txt  main.cpp
src/asio6/: CMakeLists.txt  main.cpp
src/asio7/: CMakeLists.txt  main.cpp
src/asio8/: CMakeLists.txt  main.cpp
src/asio9_in/: CMakeLists.txt  main.cpp
src/asio9_out/: CMakeLists.txt  main.cpp
src/libsee/: CMakeLists.txt  see.cpp  see_model.cpp
src/qt19_client/: CMakeLists.txt  client.cpp  main.cpp
src/qt19_client/include/qt19_client/: client.h
src/qt19_server/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
src/qt19_server/include/qt19_server/: client.h  server.h
src/qt20_server/: CMakeLists.txt  client.cpp  main.cpp  server.cpp
src/qt20_server/include/qt20_server/: client.h  server.h
src/see/: CMakeLists.txt  main.cpp  see_app.cpp
src/see/include/see/: see_app.h
test/: CMakeLists.txt
test/libsee/: CMakeLists.txt  google_test_see.cpp
test/see/: CMakeLists.txt  boost_test_see_app.cpp  boost_test_terminal_see.cpp
