add_subdirectory(asio1)
add_subdirectory(asio2)
add_subdirectory(asio3)
add_subdirectory(asio4)
add_subdirectory(asio5)
add_subdirectory(asio6)
add_subdirectory(asio7)
add_subdirectory(asio8)
add_subdirectory(asio9_out)
add_subdirectory(asio9_in)
add_subdirectory(asio10)
add_subdirectory(asio11_client)
add_subdirectory(asio11_server)
add_subdirectory(asio12_client)
add_subdirectory(asio12_server)
add_subdirectory(asio12_send_receive)
add_subdirectory(asio13_client)
add_subdirectory(asio13_server)
add_subdirectory(asio14_client)
add_subdirectory(asio14_server)
add_subdirectory(asio15_ssl)
add_subdirectory(asio16)
add_subdirectory(asio17)
add_subdirectory(asio18_client)
add_subdirectory(asio18_server)
add_subdirectory(qt19_client)
add_subdirectory(qt20_server)